added update page

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -22,6 +22,7 @@
             <div class="links-contianer">
                 <ul class="links  ">
                     <li><a href="/add" data-section=".about-us">Add</a></li>
+                    <li><a href="/update" data-section=".update">update</a></li>
                     <li><a href="/delete" data-section=".timeline">Delete</a></li>
                       <li><a href="/searchName" data-section=".Ourgallery">Search By Name</a></li>
                     <li><a href="/searchByGpa" data-section=".skills">Search By GPA</a></li>
