--- a/src/main/resources/templates/searchByName.html
+++ b/src/main/resources/templates/searchByName.html
@@ -11,7 +11,7 @@
 <h2>Search by First Name</h2>
 
 <form id="searchForm">
-    <label>First Name:</label>
+    <label>Search Query:</label>
     <input type="text" id="firstName" required><br>
 
     <button type="button" onclick="searchByFirstName()">Search</button>
@@ -26,7 +26,7 @@
 
         // Make an AJAX request to your API endpoint
         var xhr = new XMLHttpRequest();
-        xhr.open("GET", "/students/searchByFirstName?firstName=" + encodeURIComponent(firstName), true);
+        xhr.open("GET", "/students/search?query=" + encodeURIComponent(firstName), true);
         xhr.onreadystatechange = function () {
             if (xhr.readyState === 4) {
                 if (xhr.status === 200) {
